--- a/ad_manage/templates/ad_manage/mentor/become_mentor_view.html
+++ b/ad_manage/templates/ad_manage/mentor/become_mentor_view.html
@@ -51,11 +51,8 @@
                   nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.
                 </p>
 								<p>
-									<a href="{% url 'customeri:become-mentor' %}" class="btn btn-green">
+									<a href="{% url 'customeri:become-mentor-step1' %}" class="btn btn-green">
 										{% trans "Complete your profile" %}
-									</a>
-									<a href="{% url 'customeri:become-mentor' %}" class="btn btn-light-grey">
-										{% trans "Create a course" %}
 									</a>
 								</p>
 					</div>
