aniadiendo datos del usuario al perfil
datos son los necesarios para alimentar la pantalla segun sea el disenio

--- a/ad_manage/templates/customer/profile/profile.html
+++ b/ad_manage/templates/customer/profile/profile.html
@@ -5,10 +5,9 @@
 {% block tabcontent %}
 <div class="row">
   <div class="col-md-4">
-      <h3>Primer bloque de datos</h3>
       <ul>
-        <li>Avatar: {{ user.customer_profile.get_avatar  }}</li>
-        <li>Fullname: {{ user.get_full_name|default:'-' }}</li>
+        <li><img width="60" src="{{ user.customer_profile.get_avatar  }}" alt="{{ user.customer_profile.get_avatar  }}"></li>
+        <li>Fullname: <b>{{ user.get_full_name|default:'-' }}</b></li>
 
         {% if user.customer_profile.is_mentor %}
         {# se hace pequenia codnicional para mostrar cierto boton #}
@@ -20,12 +19,28 @@
   </div>
 
   <div class="col-md-4">
-      <h3>Segundo bloque de datos</h3>
 
+    <ul>
+      <li>Tiene perfil completo?: <b>{{ user.customer_profile.is_profile_complete }}</b></li>
+      <li>Es mentor activo?: <b>{{ user.customer_profile.is_active_mentor }}</b></li>
+      <li>Estado del usuario?: <b>{{user.customer_profile.get_user_status }}</b></li>
+    </ul>
 
   </div>
 
   <div class="col-md-4">
+
+    <li>Anio de nacimiento: <b>{{ user.customer_profile.birth_date }}</b></li>
+    <li>Genero: <b>{{ user.customer_profile.gender }}</b></li>
+    <li>Acerca de: <b>{{ user.customer_profile.about_me }}</b></li>
+    <li>Pais: <b>{{ user.customer_profile.country_name }}</b></li>
+    <li>Telefono: <b>{{ user.customer_profile.phone }}</b></li>
+
+  </div>
+
+  <div class="col-md-4">
+
+    <li>wishlist</li>
 
   </div>
 
