agregando implementacion de lista de wishlist en profile

--- a/ad_manage/templates/customer/profile/profile.html
+++ b/ad_manage/templates/customer/profile/profile.html
@@ -38,12 +38,14 @@
 
   </div>
 
-  <div class="col-md-4">
+</div>
 
-    <li>wishlist</li>
+<div class="row">
+  <div class="col-md-12">
+
+    {% include "customer/profile/profile_wishlists.html" %}
 
   </div>
 
 </div>
-
 {% endblock %}
